--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
 <html>
-  <h2>URN6867262</h2>
-</head>
   
+  <head>
+<img src="WebBanner.png" alt ="Banner" width="900" height="300">  
+  </head>
 </html>
