--- a/index.html
+++ b/index.html
@@ -3,6 +3,5 @@
 <html>
   
   <head>
-<img src="WebBanner.png" alt ="Banner" width="900" height="300">  
-  </head>
-</html>
+    <head>
+  <img src="WebBanner.png" alt ="Banner" width="900" height="300">  
