--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
   
   <head>
   <img src="WebBanner2023.png" alt ="Banner" width="900" height="300">  
+    <h1><b>ENG0018 COMPUTER LABORATORY 2024/25</B><1>
+    <h2>Student URN: 6867262</h2>
   </head>
   </html>
