--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <html>
   
   <head>
-  <img src="WebBanner2023.png" alt ="Banner" width="900" height="300">  
-    <h1><b>ENG0018 COMPUTER LABORATORY 2024/25</B><1>
+  <img src="WebBanner2023.png" alt ="Banner" width="1200" height="300">  
+    <h1><b>ENG0018 COMPUTER LABORATORY 2024/25</b><h1>
     <h2>Student URN: 6867262</h2>
+    <hr>
+      <h2 style="font-family:calibri;"><b>Conference Paper: Bridge Deck Repairs</b></h2>
+      <hr>
   </head>
   </html>
