--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>ENG0018 COMPUTER LABORATORY</title>
-</head>
-<body>
-  <img src="WebBanner2023.png" alt="Banner" width="1200" height="300">  
-  <h1><b>ENG0018 COMPUTER LABORATORY 2024/25</b></h1>
-  <h2>Student URN: 6867262</h2>
-  <hr>
-  <h2 style="font-family:calibri;"><b>Conference Paper: Bridge Deck Repairs</b></h2>
-  <hr>
-</body>
-</html>
+  
+  <head>
+    <title>ENG0018 COMPUTER LABORATORY 2024/25</title>
+    <style>
+      h2 {
+        font-family: Calibri, sans-serif;
+      }
+    </style>
+  </head>
 
+  <body>
+    <img src="WebBanner2023.png" alt="Banner" width="1200" height="300">  
+    <h1><b>ENG0018 COMPUTER LABORATORY 2024/25</b></h1>
+    <h2>Student URN: 6867262</h2>
+    <hr>
+    <h2><b>Conference Paper: Bridge Deck Repairs</b></h2>
+    <hr>
+  </body>
+
+</html>
