--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
-  
-  <head>
+<head>
     <title>ENG0018 COMPUTER LABORATORY 2024/25</title>
     <style>
-      h1 b, h2 b {
-        font-family: Calibri, sans-serif;
-      }
-    </style>
-  </head>
+        body {
+            font-family: 'Calibri', Arial, sans-serif;
+        }
 
-  <body>
+        h1, h2 {
+            font-family: 'Calibri', Arial, sans-serif;
+        }
+    </style>
+</head>
+<body>
     <img src="WebBanner2023.png" alt="Banner" width="1200" height="300">  
+
     <h1><b>ENG0018 COMPUTER LABORATORY 2024/25</b></h1>
     <h2>Student URN: 6867262</h2>
     <hr>
     <h2><b>Conference Paper: Bridge Deck Repairs</b></h2>
     <hr>
-  </body>
-
+</body>
 </html>
