--- a/index.html
+++ b/index.html
@@ -2,61 +2,63 @@
 <html>
 <head>
     <title>ENG0018 COMPUTER LABORATORY 2024/25</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
-        
+        /* Global Styles */
+        body {
+            background-color: #FFFFFF;
+            margin-left: 50px;
+        }
+
         h1, h2 {
             font-family: 'Calibri', Arial, sans-serif;
         }
-    </style>
-</head>
-<body>
-    <img src="WebBanner2023.png" alt="Banner" width="1200" height="300">  
 
-    <h1><b>ENG0018 COMPUTER LABORATORY 2024/25</b></h1>
-    <h2>Student URN: 6867262</h2>
-    <hr>
-    <h2><b>Conference Paper: Bridge Deck Repairs</b></h2>
-    <hr>
-</body>
-    <head>
-    <!style for tables>
-    <style>
-         table { 
-             font-family: arial, sans-serif;
-             border-collapse: collapse;
-             width: 30%;
+        /* Table Styles */
+        table {
+            font-family: Arial, sans-serif;
+            border-collapse: collapse;
+            width: 30%;
+        }
 
-         }
-
-        td,th {
+        td, th {
             border: 1px solid #dddddd;
             text-align: left;
             padding: 8px;
         }
 
         tr:nth-child(even) {
-            background color: #dddddd;
+            background-color: #dddddd;
         }
 
-        
-    </style>
-
-    <style>
+        /* Paragraph Style */
         p.ex1 {
             margin-left: 250px;
         }
+
+        /* Slideshow Styles */
+        .mySlides {
+            display: none;
+        }
     </style>
-    </head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <style>
-        .mySlides {display:none;}
-    </style>
-    <body style="background-color:#FFFFFF;margin-left:50px;">
+</head>
+<body>
+    <img src="WebBanner2023.png" alt="Banner" width="1200" height="300">
+
+    <h1><b>ENG0018 COMPUTER LABORATORY 2024/25</b></h1>
+    <h2>Student URN: 6867262</h2>
     <hr>
-        <h3 id="Abstract">Abstract</h3>
-        <p class="ex1">
-            <pre>
-                Active  Learning (Angluin,  1988,  Cohn  et  al.,  1994)  is  a  paradigm  where  a  concept  is  learnt  by  an intelligent machine through the interaction of an oracle with the machine system, over a sequence of learning epochs. A distinctive component in an active system is the querying strategy, used to sample candidate training instances from a pool and evaluate them for informativeness, i.e., their potential to  improve  the  classification  model.  Various  strategies  have  been  proposed  including;  Query  by Committee  (Seung  et  al.,  1992),Monte  Carlo  estimation  (Roy  and  McCallum,  2001),  uncertainty sampling  (Lewis  and  Gale,  1994)  and  version  space  reduction  (margin  sampling)  (Tong  and  Koller, 2001). Irrespective of how the most informative pattern instances are chosen at each epoch they are presented  for  labeling,  to  a  machine  (database)  or  human  oracle  that  has  knowledge  of  the  class labels.  After  adding  the  newly  labeled  instances  to  the  current  training  set,  a  revised  model  is subsequently induced. A goal of this process is to achieve anefficient, incremental advancement of learning at each epoch. The process is continued until some stopping criterion has been met, such as reaching a stage where information from the selected instances is contrary to the model, causing the classifier confidence to drop, as in Vlachos (2008
-            </pre>
+    <h2><b>Conference Paper: Bridge Deck Repairs</b></h2>
+    <hr>
+
+    <!-- Abstract Section -->
+    <h3 id="Abstract">Abstract</h3>
+    <p class="ex1">
+        <pre>
+Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an intelligent machine through the interaction of an oracle with the machine system, over a sequence of learning epochs. A distinctive component in an active system is the querying strategy, used to sample candidate training instances from a pool and evaluate them for informativeness, i.e., their potential to improve the classification model. Various strategies have been proposed including; Query by Committee (Seung et al., 1992), Monte Carlo estimation (Roy and McCallum, 2001), uncertainty sampling (Lewis and Gale, 1994) and version space reduction (margin sampling) (Tong and Koller, 2001). Irrespective of how the most informative pattern instances are chosen at each epoch they are presented for labeling, to a machine (database) or human oracle that has knowledge of the class labels. After adding the newly labeled instances to the current training set, a revised model is subsequently induced. A goal of this process is to achieve an efficient, incremental advancement of learning at each epoch. The process is continued until some stopping criterion has been met, such as reaching a stage where information from the selected instances is contrary to the model, causing the classifier confidence to drop, as in Vlachos (2008).
+        </pre>
+    </p>
+</body>
 </html>
+
