--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
-        /* Global Styles */
+     
         body {
             background-color: #FFFFFF;
             margin-left: 50px;
@@ -15,7 +15,6 @@
             font-family: 'Calibri', Arial, sans-serif;
         }
 
-        /* Table Styles */
         table {
             font-family: Arial, sans-serif;
             border-collapse: collapse;
@@ -32,12 +31,10 @@
             background-color: #dddddd;
         }
 
-        /* Paragraph Style */
         p.ex1 {
             margin-left: 250px;
         }
 
-        /* Slideshow Styles */
         .mySlides {
             display: none;
         }
@@ -52,10 +49,28 @@
     <h2><b>Conference Paper: Bridge Deck Repairs</b></h2>
     <hr>
 
-    <!-- Analysis and Discussion Section -->
-    <h3 id="AnalysisDiscussion">Analysis and discussion</h3>
+    <h3 id="AnalysisandDiscussion">Analysis and discussion</h3>
     <p class="ex1">
         Active  Learning (Angluin, 1988,  Cohn  et  al.,  1994)  is  a  paradigm  where  a  concept  is  learnt  by  an intelligent machine through the interaction of an oracle with the machine system, over a sequence of learning epochs. A distinctive component in an active system is the querying strategy, used to sample candidate training instances from a pool and evaluate them for informativeness, i.e., their potential to  improve  the  classification  model.  Various  strategies  have  been  proposed  including;  Query  by Committee  (Seung  et  al.,  1992),Monte  Carlo  estimation  (Roy  and  McCallum,  2001),  uncertainty sampling  (Lewis  and  Gale,  1994)  and  version  space  reduction  (margin  sampling)  (Tong  and  Koller, 2001). Irrespective of how the most informative pattern instances are chosen at each epoch they are presented  for  labeling,  to  a  machine  (database)  or  human  oracle  that  has  knowledge  of  the  class labels.  After  adding  the  newly  labeled  instances  to  the  current  training  set,  a  revised  model  is subsequently induced. A goal of this process is to achieve anefficient, incremental advancement of learning at each epoch. The process is continued until some stopping criterion has been met, such as reaching a stage where information from the selected instances is contrary to the model, causing the classifier confidence to drop, as in Vlachos (2008).
     </p>
+    <ex1>
+        <!table of contents>
+        <table>
+
+            <tr>
+                <th><h3>Table of Contents</h3></th>
+            </tr>
+            <tr>
+                <td><a href="#Introduction">Introduction</td>
+            </tr>
+            <tr>
+                <td<a href="#AnalysisandDiscussion">Analysis and Discussion</td>
+            </tr>
+
+            <tr>
+                <td><a href="#References">References</td>
+            </tr>
+        </table>
+    </ex1>
 </body>
 </html>
