--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                 <th><h3>Table of Contents</h3></th>
             </tr>
             <tr>
+                <td><a href="#Abstract">Abstract</td>
+            </tr>
+            <tr>
                 <td><a href="#Introduction">Introduction</td>
             </tr>
             <tr>
@@ -72,5 +75,6 @@
             </tr>
         </table>
     </ex1>
+    <a href="https://icevirtuallibrary.com/doi/full/10.1680/jbren.21.00034">Toshihiko et al (2023).</a>
 </body>
 </html>
