--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
                 <th><h3>Table of Contents</h3></th>
             </tr>
             <tr>
-                <td><a href="#Abstract">Abstract</td>
+                <td><a href="#Abstract">Abstract</a></td>
             </tr>
             <tr>
-                <td><a href="#Introduction">Introduction</td>
+                <td><a href="#Introduction">Introduction</a></td>
             </tr>
             <tr>
-                <td<a href="#AnalysisandDiscussion">Analysis and Discussion</td>
+                <td<a href="#AnalysisandDiscussion">Analysis and Discussion</a></td>
             </tr>
 
             <tr>
-                <td><a href="#References">References</td>
+                <td><a href="#References">References</a></td>
             </tr>
         </table>
     </ex1>
