--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         .mySlides {
             display: none;
         }
+
+        /* Ensures spacing for the Table of Contents */
+        #table-of-contents {
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -48,31 +53,36 @@
     <h2><b>Conference Paper: Bridge Deck Repairs</b></h2>
     <hr>
 
+    <!-- Table of Contents Section -->
+    <div id="table-of-contents">
+        <table>
+            <tr>
+                <th><h3>Table of Contents</h3></th>
+            </tr>
+            <tr>
+                <td><a href="#Abstract">Abstract</a></td>
+            </tr>
+            <tr>
+                <td><a href="#Introduction">Introduction</a></td>
+            </tr>
+            <tr>
+                <td><a href="#AnalysisandDiscussion">Analysis and Discussion</a></td>
+            </tr>
+            <tr>
+                <td><a href="#References">References</a></td>
+            </tr>
+        </table>
+    </div>
+
+    <!-- Analysis and Discussion Section -->
     <h3 id="AnalysisandDiscussion">Analysis and Discussion</h3>
     <p class="ex1">
         Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learned by an intelligent machine through the interaction of an oracle with the machine system, over a sequence of learning epochs. A distinctive component in an active system is the querying strategy, used to sample candidate training instances from a pool and evaluate them for informativeness, i.e., their potential to improve the classification model. Various strategies have been proposed including Query by Committee (Seung et al., 1992), Monte Carlo estimation (Roy and McCallum, 2001), uncertainty sampling (Lewis and Gale, 1994), and version space reduction (margin sampling) (Tong and Koller, 2001). Irrespective of how the most informative pattern instances are chosen at each epoch, they are presented for labeling, to a machine (database) or human oracle that has knowledge of the class labels. After adding the newly labeled instances to the current training set, a revised model is subsequently induced. A goal of this process is to achieve an efficient, incremental advancement of learning at each epoch. The process is continued until some stopping criterion has been met, such as reaching a stage where information from the selected instances is contrary to the model, causing the classifier confidence to drop, as in Vlachos (2008).
     </p>
 
-    <table>
-        <tr>
-            <th><h3>Table of Contents</h3></th>
-        </tr>
-        <tr>
-            <td><a href="#Abstract">Abstract</a></td>
-        </tr>
-        <tr>
-            <td><a href="#Introduction">Introduction</a></td>
-        </tr>
-        <tr>
-            <td><a href="#AnalysisandDiscussion">Analysis and Discussion</a></td>
-        </tr>
-        <tr>
-            <td><a href="#References">References</a></td>
-        </tr>
-    </table>
-
+    <!-- References -->
+    <h3 id="References">References</h3>
     <p>
         <a href="https://icevirtuallibrary.com/doi/full/10.1680/jbren.21.00034">Toshihiko et al (2023).</a>
     </p>
-</body>
-</html>
+</
