--- a/index.html
+++ b/index.html
@@ -85,4 +85,5 @@
     <p>
         <a href="https://icevirtuallibrary.com/doi/full/10.1680/jbren.21.00034">Toshihiko et al (2023).</a>
     </p>
-</
+</body>
+</html>
