--- a/index.html
+++ b/index.html
@@ -51,13 +51,8 @@
     <hr>
     <h2><b>Conference Paper: Bridge Deck Repairs</b></h2>
     <hr>
-
-       <h3 id="AnalysisandDiscussion">Analysis and Discussion</h3>
-    <p class="ex1">
-        Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learned by an intelligent machine through the interaction of an oracle with the machine system, over a sequence of learning epochs. A distinctive component in an active system is the querying strategy, used to sample candidate training instances from a pool and evaluate them for informativeness, i.e., their potential to improve the classification model. Various strategies have been proposed including Query by Committee (Seung et al., 1992), Monte Carlo estimation (Roy and McCallum, 2001), uncertainty sampling (Lewis and Gale, 1994), and version space reduction (margin sampling) (Tong and Koller, 2001). Irrespective of how the most informative pattern instances are chosen at each epoch, they are presented for labeling, to a machine (database) or human oracle that has knowledge of the class labels. After adding the newly labeled instances to the current training set, a revised model is subsequently induced. A goal of this process is to achieve an efficient, incremental advancement of learning at each epoch. The process is continued until some stopping criterion has been met, such as reaching a stage where information from the selected instances is contrary to the model, causing the classifier confidence to drop, as in Vlachos (2008).
-    </p>
-
-    <div id="table-of-contents">
+    
+      <div id="table-of-contents">
         <table>
             <tr>
                 <th><h3>Table of Contents</h3></th>
@@ -76,10 +71,67 @@
             </tr>
         </table>
     </div>
+    
+      <h3 id="Abstract">Abstract</h3>
+    <p class="ex1">
+   This paper presents a novel adaptive active learning strategy. The most accurate classification model from a heterogeneous classifier pool is selected at each learning epoch. Our goal is to achieve greater incremental improvement is accuracy. compared to using a single type of classification model throughout the process. The strategy is evaluated on benchmark data sets. We further consider an application to texture classification problems in sonar mosaic imagery adn compare it with non-adaptive active learning and traditional machine learning approaches. Our results show that... We conclude that...
+    </p>
+
+       <h3 id="Introduction">Introduction</h3>
+    <p class="ex1">
+          Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learned by an intelligent machine through the interaction of an oracle with the machine system, over a sequence of learning epochs. A distinctive component in an active system is the querying strategy, used to sample candidate training instances from a pool and evaluate them for informativeness, i.e., their potential to improve the classification model. Various strategies have been proposed including Query by Committee (Seung et al., 1992), Monte Carlo estimation (Roy and McCallum, 2001), uncertainty sampling (Lewis and Gale, 1994), and version space reduction (margin sampling) (Tong and Koller, 2001). Irrespective of how the most informative pattern instances are chosen at each epoch, they are presented for labeling, to a machine (database) or human oracle that has knowledge of the class labels. After adding the newly labeled instances to the current training set, a revised model is subsequently induced. A goal of this process is to achieve an efficient, incremental advancement of learning at each epoch. The process is continued until some stopping criterion has been met, such as reaching a stage where information from the selected instances is contrary to the model, causing the classifier confidence to drop, as in Vlachos (2008).
+    </p>
+
+       <h3 id="AnalysisandDiscussion">Analysis and Discussion</h3>
+    <p class="ex1">
+  Bridge deck repair durability is the subject of much recent research such as in  <a href="https://icevirtuallibrary.com/doi/full/10.1680/jbren.21.00034">Toshihiko et al (2023).</a> Table 1: Data on cost and lifespan of bridge repair.
+    </p>
+
+    Table 1: Data on cost and lifespan of bridge repairs
+    <table>
+        <tr>
+            <th>£ Cost of repairs</th>
+            <th>Lifespan of repairs (years)</th>
+        </tr>
+        <tr>
+            <td>0.7 m</td>
+            <td>2</td>
+        </tr>
+        <tr>
+            <td>3.3 m</td>
+            <td>4</td>
+        </tr>
+        <tr>
+            <td>2.6 m</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <td>17.4 m</td>
+            <td>7</td>
+        </tr>
+        <tr>
+            <td>8.8 m</td>
+            <td>9</td>
+        </tr>
+    </table>
 
     <h3 id="References">References</h3>
     <p>
-        <a href="https://icevirtuallibrary.com/doi/full/10.1680/jbren.21.00034">Toshihiko et al (2023).</a>
+    <pre>
+        Angluin, D (1988), Queries and concept learning. Machine learning 2, (4), 319-342.
+
+        Brinker, K (2003), Incorporating Diversity in Active Learning with Support Vector Machines,
+        Proceedings of the Twentieth International Conference on Machine Learning (ICML-2003).
+
+        Bruzzone, L, Chi, M and Marconcini, M (2006), A novel transductive SVM for semisupervised classification of remote-sensing images,
+        IEEE Transactions on Geoscience and Remote Sensing, 44, (11), 363.
+
+        Bruzzone, L and Perselllo, C (2009), Active Learning for classification of remote sensing images.
+        In: Geoscience and Remote Sensing Symposium, 2009 IEEE International, IGARSS 2009, 3.
+
+        Campbell, C, Cristianini, N and Smola, A (2000), Query learning with large margin classifiers.
+        In: Proc. 17th Internat. Conf. on Machine Learning. Morgan Kaufman, Stanford, CA, 111-118.
+    </pre>
     </p>
 </body>
 </html>
