--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
             </tr>
         </table>
     </div>
+
+    <p id="date&time"></p>
+
+    <script>
+
+        //JavaScript to display the date and time on my webpage
+
+        const d = new Date();
+        document.getElementByld("date&time").innerHTML = d;
+        
+    </script>
     
       <h3 id="Abstract">Abstract</h3>
     <p class="ex1">
