--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         //JavaScript to display the date and time on my webpage
 
         const d = new Date();
-        document.getElementByld("date&time").innerHTML = d;
+        document.getElementById("date&time").innerHTML = d;
         
     </script>
     
