--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
         </table>
     </div>
 
-    <p id="date&time"></p>
+    <p id="date-time"></p>
 
     <script>
 
         //JavaScript to display the date and time on my webpage
 
         const d = new Date();
-        document.getElementById("date&time").innerHTML = d;
+        document.getElementById("date-time").innerHTML = d;
         
     </script>
     
